@@ -1189,8 +1189,8 @@ prob_adj_ASL(ASL *asl)
 					cg->goff = k++;
 			}
 		}
-	if (n_obj)
-		zerograd_chk(asl);
+	/* if (n_obj) */		/* 20220520 */
+	/*	zerograd_chk(asl); */	/* 20220520 */
 #ifndef NO_BOUNDSFILE_OPTION /*{*/
 	if ((bf = asl->i.boundsfile)) {
 		if (!(f = fopen(bf, "rb")))
